syntax = "proto3";

package auth;
option go_package = "/rpc/auth;auth";

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}


message RegisterRequest {
    string username = 1;
    string password = 2;
    string vehicle_id_number = 3;
    int32 year_of_circulation = 4;
    int32 wilaya_number = 5;
    string owner_name = 6;
    string owner_address = 7;
    string chip_serial = 8;
}

message RegisterResponse {
    string access_token = 1;
    string refresh_token = 2;
}




message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
}
